prestage for email mostly in place - bug fixes for pinging, and loading.

--- a/NetworkComRoomTest/NetworkComRoomTest.csproj
+++ b/NetworkComRoomTest/NetworkComRoomTest.csproj
@@ -46,14 +46,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlertContactsListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AlertContactsListForm.Designer.cs">
+      <DependentUpon>AlertContactsListForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AlertEmailList.cs" />
+    <Compile Include="ContactSaver.cs" />
+    <Compile Include="EmailAlertSystem.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GridLineDataGridView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AlertContactsListForm.resx">
+      <DependentUpon>AlertContactsListForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
